--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_RESTAPI_URL=https://nextjs-blog-for-api.herokuapp.com/
+NEXT_PUBLIC_RESTAPI_URL=https://nextjsblog-for-api.herokuapp.com/
+
