--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,9 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env*.local
-.env.production
-.env.development
+# .env*.local
+# .env.production
+# .env.development
 
 # vercel
 .vercel
