--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "highlight.js": "^11.5.1",
+    "markdown-it": "^13.0.1",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-markdown": "^8.0.3",
+    "react-markdown-editor-lite": "^1.3.2",
     "remark-gfm": "^3.0.1",
     "swr": "^1.3.0",
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
+    "@types/markdown-it": "^12.2.3",
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
